<resources>
    <string name="app_name">Don\'t Starve</string>
    <string name="slide1_text">Order food at one touch</string>
    <string name="slide2_text">Get the daily menu</string>
    <string name="slide3_text">Find the best time for yourself</string>
    <string name="slide_register_text">Get Started</string>
    <string name="slide1_sub_text">And pay online or COD</string>
    <string name="slide2_sub_text">And carry the token with you</string>
    <string name="register_sub_text">by registering below</string>
    <string name="menu1">Statistics</string>
    <string name="menu2">Food Token</string>
    <string name="menu3">Daily Menu</string>
    <string name="or">or</string>
    <string name="verify_text">Verify yourself</string>
    <string name="verify_sub_text">to access all features</string>
    <string name="later_text">Do it later</string>
    <string name="later_sub_text"><![CDATA[& try the app now]]></string>
    <string name="daily_menu">Daily Menu</string>
    <string name="statistics">Statistics</string>

</resources>