<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.Verify">

    <!-- TODO: Update blank fragment layout -->



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="200dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/acuminpro_extralight"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <View
        android:layout_width="125dp"
        android:layout_height="3dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="200dp"
        android:layout_toLeftOf="@id/textView"
        android:background="@color/black" />

    <View
        android:layout_width="125dp"
        android:layout_height="3dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="35dp"
        android:layout_toRightOf="@id/textView"
        android:background="@color/black" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/acuminpro_bold"
        android:text="@string/verify_text"
        android:textColor="@color/black"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:textSize="18sp"
        android:text="@string/verify_sub_text"
        android:textColor="@color/black" />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="270dp"
        android:background="@drawable/custom_button_2"
        android:padding="10dp"
        android:src="@drawable/camera" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="450dp"
        android:fontFamily="@font/acuminpro_bold"
        android:text="@string/later_text"
        android:textColor="@color/black"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        android:textSize="18sp"
        android:text="@string/later_sub_text"
        android:textColor="@color/black" />

    <ImageButton
        android:id="@+id/button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="570dp"
        android:background="@drawable/custom_button"
        android:padding="10dp"
        android:src="@drawable/done" />

    <!--ImageView
        android:layout_marginTop="370dp"
        android:layout_width="350dp"
        android:layout_marginLeft="15dp"
        android:layout_height="250dp"
        android:id="@+id/image"
        android:layout_marginBottom="10dp"/-->
</FrameLayout>